# vehicle-type-detection-api

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.debug  FIXES_SUMMARY.md  MANIFEST.in  Makefile  PYTHON_3_14_CONFIRMATION.md  README.md  TRUNK_BASED_DEVELOPMENT.md  UV_README.md  __init__.py  conftest.py  dev-requirements.txt  docker-compose-debug.yml  isort.cfg  lefthook.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.py
.github/workflows/: ci.yml  pre-commit.yml  test.yml
docs/superpowers/plans/: 2026-03-11-enhanced-api-monitoring-plan.md
docs/superpowers/specs/: 2026-03-11-enhanced-api-monitoring-design.md  2026-03-11-enhanced-features-design.md
tests/unit_tests/: test_main.py
vehicle-type-detection/src/adapters/: image_adapter.py  openvino_adapter.py
vehicle-type-detection/src/core/: logger.py
vehicle-type-detection/src/services/: model_service.py
vehicle-type-detection_api/src/adapters/: ports.py
vehicle-type-detection_api/src/services/: detection_service.py
vehicle-type-detection_api/tests/: __init__.py
vehicle_type_detection_api/src/: main.py
vehicle_type_detection_api/src/adapters/: __init__.py  dependencies.py  job_storage_adapter.py  openvino_adapter.py  ports.py  torch_yolo_adapter.py  video_adapter.py
vehicle_type_detection_api/src/core/: config.py  constants.py  correlation.py
vehicle_type_detection_api/src/infrastructure/: structured_logger.py
vehicle_type_detection_api/src/middleware/: correlation_middleware.py  metrics_middleware.py
vehicle_type_detection_api/src/routers/: batch.py  detect.py  jobs.py  metrics.py  video.py
vehicle_type_detection_api/src/services/: batch_service.py  detection_service.py  job_queue_service.py  metrics_service.py  model_service.py  video_service.py
vehicle_type_detection_api/tests/: __init__.py  test_adapters.py  test_batch_router.py  test_batch_service.py  test_config.py  test_correlation.py  test_health.py  test_job_storage_adapter.py  test_main.py  test_metrics_router.py  test_metrics_service.py  test_services.py  test_structured_logging.py
